Updates from Overleaf

--- a/thesis/paper/sections/5_evaluation.tex
+++ b/thesis/paper/sections/5_evaluation.tex
@@ -153,13 +153,14 @@ In our likert scale questions, we focused on the trade-offs in order to get answ
 
 \subsection{Phase 1 Results}
 
-In the first phase, we received 119 responses (after filtering out duplicate answers and answers with invalid worker ids). Information about participant demographics can be found in the \nameref{App:AppendixA}. Our results for the first phase are very positive, we were able to validate the problem and implement Intertext with more confidence.
+In the first phase, we received 119 responses (after filtering out duplicate answers and answers with invalid worker ids). In this section we included some of the highlights of our survey; full response data and participant demographics can be found in the \nameref{App:AppendixA}. Our results for the first phase are very positive, we were able to validate the problem and implement Intertext with more confidence.
 
 % ------ ui / ux
 
 \begin{figure}[H]
 \centering
 \begin{tikzpicture}
+\tikzstyle{every node}=[font=\small]
 
 \pie[radius=2,color={green!70,green!30,gray!30,red!40,red!70}]{10.9/,50.4/,28.6/,8.4/,1.7/}
 
@@ -175,13 +176,14 @@ In the first phase, we received 119 responses (after filtering out duplicate ans
 \caption{\newline\textit{I experience UI/UX inconsistencies in some applications} (left)\newline\textit{I sometimes experience poor design in some applications} (right)} \label{fig:ev_p1_1}
 \end{figure}
 
-Our first two questions focuses on how users perceives applications they use on a daily basis in terms of user experience or user interfaces. We asked participants whether they experience poor design or inconsistent user interfaces/user experiences, and most of them responded by stating that they experience some form of an issue, as it can be seen in figure~\ref{fig:ev_p1_1}.
+Our first two questions focuses on how users perceive applications they use on a daily basis in terms of user experience or user interfaces. We asked participants whether they experience poor design or inconsistent user interfaces/user experiences, and most of them responded by stating that they experience some form of an issue, as it can be seen in figure~\ref{fig:ev_p1_1}.
 
 % ------ ads 
 
 \begin{figure}[H]
 \centering
 \begin{tikzpicture}
+\tikzstyle{every node}=[font=\small]
 
 \pie[radius=2,color={green!70,green!30,gray!30,red!40,red!70}]{12.6/,50.4/,21.0/,10.1/,5.9/}
 
@@ -199,215 +201,238 @@ Our first two questions focuses on how users perceives applications they use on 
 
 Next, we focused on advertisement, as it can be seen as one of the leading causes of frustration and a major aspect that hinders user experience for many users. As we expected, there is a strong opinion against advertisement. There seems to be a consensus that the advertisement sector is out of control, and more than 65\% of our participants stated that they use an ad blocking software. In order to understand the extent of the frustration, we asked whether participants would be willing to pay a small fee rather than seeing ads, more than half of our participants responded positively as it can be seen in figure~\ref{fig:ev_p1_2}. Detailed information on the responses related to advertisement can be found in the \nameref{App:AppendixA}.
 
-% ------ test
+% ------ customisability
 
 \begin{figure}[H]
 \centering
 \begin{tikzpicture}
+\tikzstyle{every node}=[font=\small]
 
-\pie[radius=2,color={green!70,green!30,gray!30,red!40,red!70}]{12.6/,50.4/,21.0/,10.1/,5.9/}
+\pie[radius=2,color={green!70,green!30,gray!30,red!40,red!70}]{16.0/,47.9/,28.6/,6.7/,0.8/}
 
 \pie[radius=2,text=legend,pos={4.5,0},color={green!70,green!30,gray!30,red!40,red!70}]{
-      19.3/Strongly agree,
-      33.6/Agree,
-      21.8/Neutral,
-      15.1/Disagree,
-      10.1/Strongly disagree}
-
-\pie[pos={2.25,-3.9},radius=2,color={green!70,green!30,gray!30,red!40,red!70}]{12.6/,50.4/,21.0/,10.1/,5.9/}
+      18.5/Strongly agree,
+      47.9/Agree,
+      22.7/Neutral,
+      8.4/Disagree,
+      2.5/Strongly disagree}
 
 \end{tikzpicture}
 \vspace*{-5mm}
-\caption{\newline\textit{Lorem ipsum dolor sit amet} (left)\newline\textit{Lorem ipsum dolor sit amet} (right)\newline\textit{Lorem ipsum dolor sit amet} (bottom)} \label{fig:ev_p1_test}
+\caption{\newline\textit{I wish I was able to customise the appearances of websites/applications} (left)\newline\textit{I wish I could choose or create a universal theme that would apply to all websites/applications} (right)} \label{fig:ev_p1_3}
 \end{figure}
 
-% ------
+Customisability is another aspect we asked our participants about. While some specific applications, such as code editors allows extensive customisation for their end users, it is not a very common in typical front-end applications. In the recent years, design trends that has been surfacing suggests some level of customisation options are being offered by modern front-end applications, and these changes are often greatly appreciated by many users. For instance, Github recently released a dark mode option and announced this new feature on the Twitter platform \footnote{https://twitter.com/github/status/1336362679506784256}. The extent of support and appreciation can be seen from the responses. However customisability is usually limited to simple adjustments such as the colour theme and font sizes. The responses we received as it can be seen in figure~\ref{fig:ev_p1_3} shows that users are mostly positive about possibilities of extended customisability offerings. Furthermore we asked participants their opinion on a universal theme that would apply to all websites/applications they use, hinting to the unified approach that Intertext adopts, and we received even more positive responses, more than 65\% of our users responded positively.
 
+% ------ cross-platform availability
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p1_q8.pdf}
-  \textbf{Question:} I wish I was able to customise the appearances of websites/applications.
+\centering
+\begin{tikzpicture}
+\tikzstyle{every node}=[font=\small]
+
+\pie[radius=2,color={green!70,green!30,gray!30,red!40,red!70}]{16.0/,60.5/,18.5/,5.0/,0/}
+
+\pie[radius=2,text=legend,pos={4.5,0},color={green!70,green!30,gray!30,red!40,red!70}]{
+      36.1/Strongly agree,
+      38.7/Agree,
+      18.5/Neutral,
+      5.9/Disagree,
+      0.8/Strongly disagree}
+
+\end{tikzpicture}
+\vspace*{-5mm}
+\caption{\newline\textit{Applications I use on a daily basis are mostly available on all my devices/platforms} (left)\newline\textit{If I am going to use a service just for once, I prefer using their website instead of downloading their application on my phone} (right)} \label{fig:ev_p1_4}
 \end{figure}
+
+Next, we asked about the cross-platform availability of participants daily websites/applications. Most of the participants stated that the applications they use on a daily basis are mostly available on all their devices and platforms. This was a rather unexpected outcome, we concluded that most popular websites/applications used on a daily basis such as internet browsers, email clients, music players, social applications and note taking applications are either already available for popular mobile/desktop platforms and web natively, or they offer some or all of their functionality through an API, allowing replacement applications to be built. We also asked if they go through the inconvenience of downloading an application for services/products that they will be using only once, and the majority of our participants stated that they refrain from downloading the application and prefer using the website in such cases.
+
+% ------ privacy/security
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p1_q9.pdf}
-  \textbf{Question:} I wish I could choose or create a universal theme that would apply to all websites/applications
+\centering
+\begin{tikzpicture}
+\tikzstyle{every node}=[font=\small]
+
+\pie[radius=2,color={green!70,green!30,gray!30,red!40,red!70}]{39.5/,41.2/,15.1/,4.2/,0/}
+
+\pie[radius=2,text=legend,pos={4.5,0},color={green!70,green!30,gray!30,red!40,red!70}]{
+      14.3/Strongly agree,
+      49.6/Agree,
+      21.8/Neutral,
+      10.1/Disagree,
+      4.2/Strongly disagree}
+
+\end{tikzpicture}
+\vspace*{-5mm}
+\caption{\newline\textit{I care about my privacy on the internet} (left)\newline\textit{I would rather pay a small fee than paying with my data} (right)} \label{fig:ev_p1_5}
 \end{figure}
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p1_q10.pdf}
-  \textbf{Question:} Applications I use on a daily basis are mostly available on all my devices/platforms
-\end{figure}
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p1_q11.pdf}
-  \textbf{Question:} Occasionally I have to use desktop applications that are not optimised for small screens/touch interfaces on my phone
-\end{figure}
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p1_q12.pdf}
-  \textbf{Question:} If I'm going to use a service just for once, I prefer using their website instead of downloading their application on my phone
-\end{figure}
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p1_q13.pdf}
-  \textbf{Question:} I feel safe on the internet
-\end{figure}
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p1_q14.pdf}
-  \textbf{Question:} I care about my privacy on the internet
-\end{figure}
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p1_q15.pdf}
-  \textbf{Question:} Me, or someone I know was targeted by malicious software before
-\end{figure}
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p1_q16.pdf}
-  \textbf{Question:} I would rather pay a small fee than paying with my data
-\end{figure}
+Lastly, we asked users opinions on privacy and security. We found that most of the participants do not have major concerns on security, however we noticed a strong stance about online privacy. More than 80\% of our participants stated that they care about their privacy online, and more than 60\% stated that they would rather pay a fee than compromising their privacy.
 
 
-\newpage
 \subsection{Phase 2 Results}
 
-As mentioned in the previous section, we conducted two separate questionnaire targeting end users and developers for phase two of our user survey. After removing duplicate submissions and responses with invalid worker ids, we were left with 54 submissions for the end users survey, and 14 for the developer survey. Below, we present the response data for answers to each question, with the question text underneath with an indication for which survey the question is from. For both surveys, we include age, country and gender data. For the developer survey, we additionally include years of experience as well.
+As mentioned in the previous section, we conducted two separate questionnaire targeting end users and developers for phase two of our user survey. After removing duplicate submissions and responses with invalid worker ids, we were left with 54 submissions for the end users survey, and 14 for the developer survey. Below we present the highlights of both surveys, full response data as well as the participant demographics can be found in the \nameref{App:AppendixA}.
 
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2u_age.pdf}
-  \textbf{Age distribution (end user survey)}
-\end{figure}
-
+% ------ standardised ui components
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2d_age.pdf}
-  \textbf{Age distribution (Developer survey)}
+\centering
+\begin{tikzpicture}
+\tikzstyle{every node}=[font=\small]
+
+\pie[radius=2,color={green!70,green!30,gray!30,red!40,red!70}]{18.5/,64.8/,13.0/,1.8/,1.9/}
+
+\pie[radius=2,text=legend,pos={4.5,0},color={green!70,green!30,gray!30,red!40,red!70}]{
+      37.0/Strongly agree,
+      44.4/Agree,
+      16.7/Neutral,
+      1.9/Disagree,
+      0/Strongly disagree}
+
+\end{tikzpicture}
+\vspace*{-5mm}
+\caption{\textbf{end user survey}\newline\textit{Standardised UI components will improve the consistency across front-end applications} (left)\newline\textit{I prefer consistency over variability} (right)} \label{fig:ev_p2_1}
 \end{figure}
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2u_gender.pdf}
-  \textbf{Gender distribution (end user survey)}
-\end{figure}
+First set of questions on the end user survey was on the standardised UI components of Intertext. Participants were extremely positive about this approach, more than 80\% of our participants responded that this will improve the consistency across front-end applications. One drawback of this approach is that there will be less variability, however once again more than 80\% of the participants stated that they prefer consistency over variability, with 37\% of them responding with \texttt{Strongly agree}.
+
+% ------ advertisement
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2d_gender.pdf}
-  \textbf{Gender distribution (Developer survey)}
+\centering
+\begin{tikzpicture}
+\tikzstyle{every node}=[font=\small]
+
+\pie[radius=2,color={green!70,green!30,gray!30,red!40,red!70}]{29.6/,48.1/,13.0/,7.4/,1.9/}
+
+\pie[radius=2,text=legend,pos={4.5,0},color={green!70,green!30,gray!30,red!40,red!70}]{
+      31.5/Strongly agree,
+      48.1/Agree,
+      14.8/Neutral,
+      3.7/Disagree,
+      1.9/Strongly disagree}
+
+\end{tikzpicture}
+\vspace*{-5mm}
+\caption{\textbf{end user survey}\newline\textit{I prefer advertisements to blend in naturally to the look-and-feel of the website instead of sticking out} (left)\newline\textit{I am okay with seeing non-intrusive and respectful advertisement (with no compromise of privacy), OR paying a small fee in order to support the creator} (right)} \label{fig:ev_p2_2}
 \end{figure}
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2u_country.pdf}
-  \textbf{Country of Origin (end user survey)}
-\end{figure}
+Then, we asked about the implications of Intertext on advertisement. Intertext prevents online advertisers to create ads that are intrusive that hinder user experience. Intertext however cannot and does not prevent advertisements in general, but enforces them to be respectful to the user in terms of user experience and privacy. Most of our participants felt positive about this, they stated that they would prefer advertisements to blend in naturally with the website rather sticking out. They were even supportive of this as most of them stated that they were okay with seeing advertisements with respectful boundaries, or paying a small fee, in order to support the content creator.
+
+% ------ accessibility
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2d_country.pdf}
-  \textbf{Country of Origin (Developer survey)}
+\centering
+\begin{tikzpicture}
+\tikzstyle{every node}=[font=\small]
+
+\pie[radius=2.5,text=legend,pos={4.5,0},color={green!70,green!30,gray!30,red!40,red!70}]{
+      18.5/Strongly agree,
+      59.3/Agree,
+      18.5/Neutral,
+      3.7/Disagree,
+      0/Strongly disagree}
+
+\end{tikzpicture}
+\vspace*{-1mm}
+\caption{\textbf{end user survey}\newline\textit{I would benefit from the guaranteed accessibility aspect of Intertext}} \label{fig:ev_p2_3}
 \end{figure}
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2d_experience.pdf}
-  \textbf{Years of Experience (Developer survey)}
-\end{figure}
+Next, we had a question on accessibility. Intertext provides components out-of-the-box, all of which are implemented in an accessible way. Thus, Intertext applications that are made out of these components will surely be accessible. For this question, we had a paragraph clarifying to the scope of accessibility; that accessibility is not only for people with disabilities, but how and why in can benefit everyone \footnote{https://www.w3.org/standards/webdesign/accessibility}. Then we asked whether they would personally benefit from Intertext in terms of accessibility perspective, and most of the participants stated that they would.
+
+% ------ customisability
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2u_q1.pdf}
-  \textbf{Question (end user survey):} Standardised UI components will improve the consistency across front-end applications
+\centering
+\begin{tikzpicture}
+\tikzstyle{every node}=[font=\small]
+
+\pie[radius=2,color={green!70,green!30,gray!30,red!40,red!70}]{37.0/,44.4/,16.7/,1.9/,0/}
+
+\pie[radius=2,text=legend,pos={4.5,0},color={green!70,green!30,gray!30,red!40,red!70}]{
+      29.6/Strongly agree,
+      61.1/Agree,
+      7.4/Neutral,
+      1.9/Disagree,
+      0/Strongly disagree}
+
+\end{tikzpicture}
+\vspace*{-5mm}
+\caption{\textbf{end user survey}\newline\textit{I prefer customisability over variability} (left)\newline\textit{I love that I can create my own theme OR chose a theme I like that applies for all applications} (right)} \label{fig:ev_p2_4}
 \end{figure}
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2u_q2.pdf}
-  \textbf{Question (end user survey):} I prefer consistency over variability
-\end{figure}
+We found after our user studies that customisability is one of the aspects that gets the most support and positivity. In this phase of our study, most of our participants responded very positively to our questions regarding customisability. One drawback of customisability is the necessity of standardised component approach, which impacts variability of user interfaces across applications. However our studies suggest that this does not bother users at all, most of our users were in favour of customisability at the cost of variability. In fact, more than 90\% of our users responded that they would love it if they can choose a universal theme that applies to all front-ends across applications.
+
+% ------ cross platform support
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2u_q3.pdf}
-  \textbf{Question (end user survey):} I prefer advertisements to blend in naturally to the look-and-feel of the website instead of sticking out
+\centering
+\begin{tikzpicture}
+\tikzstyle{every node}=[font=\small]
+
+\pie[radius=2,color={green!70,green!30,gray!30,red!40,red!70}]{33.3/,53.7/,7.4/,5.6/,0/}
+
+\pie[radius=2,text=legend,pos={4.5,0},color={green!70,green!30,gray!30,red!40,red!70}]{
+      37.0/Strongly agree,
+      46.3/Agree,
+      11.1/Neutral,
+      1.9/Disagree,
+      3.7/Strongly disagree}
+
+\end{tikzpicture}
+\vspace*{-5mm}
+\caption{\textbf{end user survey}\newline\textit{I would be interested in seeing applications running natively on alternative platforms/devices (other than desktop/mobile; such as wearables, command-line interfaces and so on)} (left)\newline\textit{If all devices/platforms/environments supported all applications that I use natively, it would increase the use of my other devices} (right)} \label{fig:ev_p2_5}
 \end{figure}
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2u_q4.pdf}
-  \textbf{Question (end user survey):} I am okay with seeing non-intrusive and respectful advertisement (with no compromise of privacy), OR paying a small fee in order to support the creator
-\end{figure}
+Responses to questions regarding the cross-platform support came rather unexpectedly. Our study from phase 1 suggested that participants were not overly enthusiastic about cross-platform availability as most of their daily applications were already supported on their devices, and they did not seem to have a notable issue with lack of cross-platform support. However, once they were introduced to Intertext and the cross-platform support that comes with it, it appeared that participants were largely in favour of said support, especially on alternative devices rather than traditional desktop/mobile platforms. Most of the participants stated that they would be interested in seeing applications running natively on non-traditional devices/platforms such as wearables and command-line interfaces. They also stated that if this was the case, it would likely increase their usage of alternative devices/platforms.
+
+% ------ privacy/security
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2u_q5.pdf}
-  \textbf{Question (end user survey):} I would benefit from the guaranteed accessibility aspect of Intertext
+\centering
+\begin{tikzpicture}
+\tikzstyle{every node}=[font=\small]
+
+\pie[radius=2,text=legend,pos={4.5,0},color={green!70,green!30,gray!30,red!40,red!70}]{
+      25.9/Strongly agree,
+      64.8/Agree,
+      3.7/Neutral,
+      5.6/Disagree,
+      0/Strongly disagree}
+
+\end{tikzpicture}
+\vspace*{-1mm}
+\caption{\textbf{end user survey}\newline\textit{I would prefer guaranteed privacy and security over rich front-end functionality}} \label{fig:ev_p2_6}
 \end{figure}
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2u_q6.pdf}
-  \textbf{Question (end user survey):} I prefer customisability over variability
-\end{figure}
+Intertext guarantees security/privacy by preventing third-party code execution on users devices. This is achieved by forcing developers to implement business logic on the server side, and only accepting non-executable XML code that renders on user device by an Intertext client. The obvious drawback of this approach is the possibility of building applications with rich front-end functionality. We asked participants opinion on this matter, and most of the participants stated that they would prefer privacy/security over said front-end functionalities.
+
+% ------ developer
 
 \begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2u_q7.pdf}
-  \textbf{Question (end user survey):} I love that I can create my own theme OR chose a theme I like that applies for all applications
+\centering
+\begin{tikzpicture}
+\tikzstyle{every node}=[font=\small]
+
+\pie[radius=2,color={green!70,green!30,gray!30,red!40,red!70}]{28.6/,42.9/,28.6/,0/,0/}
+
+\pie[radius=2,text=legend,pos={4.5,0},color={green!70,green!30,gray!30,red!40,red!70}]{
+      7.1/Strongly agree,
+      57.1/Agree,
+      35.7/Neutral,
+      0/Disagree,
+      0/Strongly disagree}
+
+\pie[radius=2,pos={2.25,3.9},color={green!70,green!30,gray!30,red!40,red!70}]{35.7/,50.0/,14.3/,0/,0/}
+
+\end{tikzpicture}
+\vspace*{-1mm}
+\caption{\textbf{developer survey}\newline\textit{I would prefer using IUIDL over building my own components from scratch with the cost of:}
+\newline- \textit{adding cross-platform support} (top)
+\newline- \textit{making them accessible} (left)
+\newline- \textit{maintenance} (right)} \label{fig:ev_p2_7}
 \end{figure}
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2u_q8.pdf}
-  \textbf{Question (end user survey):} I prefer choosing the look-and-feel I like for all apps, instead of each app having their own look-and-feel
-\end{figure}
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2u_q9.pdf}
-  \textbf{Question (end user survey):} I would be interested in seeing applications running natively on alternative platforms/devices (i.e. other than desktop/mobile - such as wearables, command-line interfaces etc.)
-\end{figure}
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2u_q10.pdf}
-  \textbf{Question (end user survey):} If all devices/platforms/environments supported all applications that I use natively, it would increase the use of my other devices.
-\end{figure}
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2u_q11.pdf}
-  \textbf{Question (end user survey):} I would prefer guaranteed privacy and security over rich front-end functionality
-\end{figure}
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2d_q1.pdf}
-  \textbf{Question (Developer survey):} I would prefer using IUIDL over building my own components from scratch with the cost of adding cross-platform support
-\end{figure}
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2d_q2.pdf}
-  \textbf{Question (Developer survey):} I would prefer using IUIDL over building my own components from scratch with the cost of making them accessible
-\end{figure}
-
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=13cm]{thesis/paper/images/p2d_q3.pdf}
-  \textbf{Question (Developer survey):} I would prefer using IUIDL over building my own components from scratch with the cost of maintenance
-\end{figure}
+As for the developer survey, we received a mix of positive and neutral responses. In this survey, we gave an overall rundown of Intertext and provided a technical overview with a demo codebase. Then we asked developers whether or not they would prefer using Intertext for benefits in cross-platform support, accessibility and maintenance. In all three categories the responses were mostly positive as seen in figure~\ref{fig:ev_p2_7}.
