Updates from Overleaf

--- a/thesis/paper/sections/0_acknowledgements.tex
+++ b/thesis/paper/sections/0_acknowledgements.tex
@@ -1,1 +1,9 @@
 \section*{Acknowledgements} \label{acknowledgements}
+
+This section is dedicated for those who helped and supported me throughout this journey. This thesis was written during difficult times, throughout lock-downs and uncertainty, it would not have been possible without all the support I have received.
+
+First and foremost, I would like to thank Professor Dr. Beat Signer for all his guidance and support. At times when I got so overwhelmed that I started doubting that I would successfully finish writing this thesis, he kept me motivated and in the right track. 
+
+Second, I would like to thank my girlfriend \begin{CJK}{UTF8}{min}あやな\end{CJK} (Ayana). I wouldn't have made though the hard times without her love and support, and all that she did for keeping me sane. Further, I would like to thank my mom/dad, and friends for all the love and support. 
+
+Moreover, this thesis was written in parallel with my work. In fact, I have worked for two different companies throughout this thesis; both of which have been very supportive. I would like to thank my friends and coworkers at MarketMuse and Autify for being patient with me.
