--- a/thesis/paper/thesis.tex
+++ b/thesis/paper/thesis.tex
@@ -15,6 +15,7 @@
 \usepackage{tcolorbox}
 \usepackage{xurl}
 \usepackage{pgf-pie} 
+\usepackage{CJKutf8}
 
 \input{thesis/paper/utils/json-lang}
 \input{thesis/paper/utils/xml-lang}
